@@ -1,22 +1,32 @@
 <%@ Page language="c#" Codebehind="MalformedTestPage.aspx.cs" AutoEventWireup="false" Inherits="NUnitAspTestPages.MalformedTestPage" %>
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN" >
-<HTML>
+<html>
 	<HEAD>
 		<title>MalformedTestPage</title>
 		<meta name="GENERATOR" Content="Microsoft Visual Studio 7.0">
 		<meta name="CODE_LANGUAGE" Content="C#">
-		<meta name="vs_defaultClientScript" content="JavaScript">
-		<meta name="vs_targetSchema" content="http://schemas.microsoft.com/intellisense/ie5">
-	</HEAD>
-	<body MS_POSITIONING="GridLayout">
+		<meta name=vs_defaultClientScript content="JavaScript">
+		<meta name=vs_targetSchema content="http://schemas.microsoft.com/intellisense/ie5">
+	</head>
+	<body MS_POSITIONING="GridLayout" single-quoted='some"text'>
+		
+		<script language="javascript">
+			if(true && true) {} 
+		</script>
+
 		<form id="MalformedTestPage" method="post" runat="server">
+			<hr noshade />
+
 			This page has malformed XHTML.
 			<br>
 			The DOCTYPE tag is missing a URL, the meta tags are missing their closing slash 
 			and the br tag is missing its closing slash.
 			<br>
+			Some meta tag attributes are missing their double quotes. Body attribute
+			has one single-quoted attribute value containg a single double-quote character
 			<br>
-			It's typical of a page generated by Visual Studio .NET, and NUnitAsp must be to 
+			<br>
+			It's typical of a page generated by Visual Studio .NET, and NUnitAsp must be able to 
 			test it.
 			<br>
 			<br>
@@ -28,7 +38,11 @@
 				<li>And this list item will be very long, and separated by at least one line break,
 				and <b>will</b> have a terminating tag.  Will that cause the current strategy to break,
 				or will it work?</li>
+				<li>An unterminated item
+				<li>yet another one
 			</ul>
+			Another badly formatted element
+			<input type="button" value=">>">
 			<p>Unfortunately, they don't work yet.</p>
 			<p>
 				One ASP.NET control is included so there's something to test against.
@@ -37,4 +51,4 @@
 			</p>
 		</form>
 	</body>
-</HTML>
+</html>
